--- a/package.json
+++ b/package.json
@@ -39,6 +39,13 @@
     "nodemailer": "^6.9.5",
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
-    "pdf-parser": "^1.0.5"
+    "pdf-parse": "^1.1.1",
+    "pdf-parser": "^1.0.5",
+    "pdfjs-dist": "^3.11.174",
+    "randomstring": "^1.3.0",
+    "shortid": "^2.2.16",
+    "socket.io": "^4.7.2",
+    "uuid": "^9.0.1",
+    "validator": "^13.11.0"
   }
 }
